Add simple design of sign up and sign in

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,6 +2,13 @@ server:
   port: 80
 
 spring:
+  thymeleaf:
+    enabled: true
+    cache: false
+    check-template-location: true
+    prefix: classpath:/templates/
+    suffix: .html
+
   config:
     activate:
       on-profile: local
